--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
+      href="http://localhost/assets/bootstrap/css/bootstrap.min.css"
     />
     <title>Storefront</title>
+    {% block style %}
+      
+    {% endblock style %}
   </head>
   <body>
-    <main>{% block content %} {% endblock content %}</main>
+    <main class="container my-4">{% block content %} {% endblock content %}</main>
   </body>
 </html>
